--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					
 				</div>
 				<div class="pagefooter">
-					Esta pagina foi editada em March.2021 | Template by <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a> <!-- Please leave this link unchanged -->
+					Esta pagina foi editada em 2021 | Template by <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a> <!-- Please leave this link unchanged -->
 					Sem relação com Wikipedia original.
 					<div class="footerlinks">
 						<a href="#">Política de privacidade</a> <a href="#">Política de Cookie</a> <a href="#">Desenvolvedores</a>
