--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 		<div class="wrapAll clearfix">
 			<div class="sidebar">
 				<div class="logo">
-					<a href="/"><img src='img/logo-devscansados-ico.png' alt="logoAQUI"></a>
+					<a href="/"><img src='img/logoPerfil.JPG' alt="Lucas Cardoso"></a>
 				</div>
 				<div class="navigation">
-					<ul>
-						<li><a href="#">Main page</a></li>
-						<li><a href="#">Contents</a></li>
-						<li><a href="#">Featured content</a></li>
-					</ul>
 					<h3>Redes Sociais</h3>
 					<ul>
 						<li>
-							<a href="https://www.linkedin.com/company/devscansados/" target="_blank">
+							<a href="https://www.instagram.com/lucascardoso_01" target="_blank">
+								<img src="img/instagram.png" alt="logo instagram" height="14"> Instagram
+							</a>
+				</li>
+						<li>
+							<a href="https://www.linkedin.com/in/lucas-cardoso-5a041a114/" target="_blank">
 								<img src="img/linkedin.png" alt="logo linkedin" height="14"> Linkedin
 						</a>
 						</li>
@@ -58,31 +58,27 @@
 							<a href="https://www.github.com/devlucascardoso" target="_blank">
 								<img src="img/github.png" alt="logo github" height="14"> GitHub
 						</a>
-						</li>
-						<li>
-							<a href="https://twitter.com/cardozin84" target="_blank">
-								<img src="img/twitter1.ico" alt="logo twitter" height="14"> Twitter
+					</li>
+					<li>
+							<a href="mailto:lucascardoso946@gmail.com" target="_blank">
+								<img src="img/email.png" alt="logo email" height="14"> E-mail
 						</a>
-						</li>
-					</ul>
+					</li>
 
-					<h3>Eventos</h3>
+					<h3>Projetos</h3>
 					<ul>
-							<li> - <a href="https://evento2020.devscansados.com.br" target="_blank">Edição 2021</a></li>
+							<li> <a href="https://tipsterlucascardoso.blogabet.com" target="_blank">Apostas Esportivas</a></li>
 					</ul>
-					<ul>
-							<li><a href="https://www.sympla.com.br/devscansados" target="_blank">Drops (Meetups)</a></li>
-					</ul>
+					
+
 
 					<h3></h3>
 					<ul>
 							<li>
 									<a href="http://loja.devscansados.com.br" target="_blank">Loja</a>
-									<img src="img/coracao.jpg" alt="logo coracao" height="14">
 							</li>
-							<li>
-									<a href="/media-kit.pdf" target="_blank">Media Kit</a>
-							</li>
+
+
 					</ul>
 			</div>
 	</div>
@@ -93,52 +89,39 @@
 				<div class="headerLinks">
 					<span class="user">Não Logado</span>
 				</div>
-				<div class="tabs clearfix">					
+				<div class="tabs clearfix">
 					</div>
-
 				<div class="article">
 					<h1>Lucas Cardoso</h1>
-					<p class="roleNote">Meu site pessoal, aqui você conhece um pouco mais sobre mim.</p>					
-					<div class="articleRight">
-						<div class="articleRightInner">
-						</div>
-					</div>
-					<p>
-						<b>Lucas Cardoso Maia</b> é um gaúcho filho das águas salgadas norte-rio-grandenses, universitário, desenvolvedor, nas horas vagas apostador e joga uns jogos.<strong></strong></p>
-					<div class="contentsPanel">
-						<div class="contentsHeader">índice</div>
-						<ul>
-							<li>
-								<span>1</span><a href="#">Biografia</a>
-								<ul>
-									<li><span>1.1</span><a href="#">Camel's hair pencil</a> </li>							
-								</ul>
-							</li>
-							<li><span>2</span><a href="#">Health</a></li>
-							<li><span>3</span><a href="#">Manufacture</a></li>
-							<li><span>4</span><a href="#">Grading and classification</a></li>
-						</ul>
-					</div>
+					<p class="roleNote">Meu site pessoal, aqui você conhece um pouco mais sobre mim.</p>
+					<p><b>Lucas Cardoso Maia</b> é um gaúcho que mora no Nordeste, universitário, desenvolvedor, nas horas vagas apostador e joga uns jogos.</p>
 					<h2>Biografia</h2>
 					<h3>Carreira</h3>
-					<p>Nascido e criado em Mossoró, Rio Grande do Norte, sempre fui apaixonado por computação e tecnologia, desde novo sempre tive a curiosidade como funcionava o computador e começei a "fuçar" conhecendo mais profundamente, naquela época, em meados de 2006 já aprendia sobre conceitos básicos de computação ... até que me formei na escola, conclui o ensino médio e entrei numa universidade, hoje estou fazendo Engenharia de Software e cá estou, escrevendo meu próprio site do 0 somente com CSS e HTML, a base da pirâmide de um grande caminho de conhecimento que tenho pela frente.</p>
+					<p>Nascido em São Leopoldo-RS e criado em Mossoró, Rio Grande do Norte, sempre fui apaixonado por computação e tecnologia, desde novo sempre tive a curiosidade como funcionava o computador e começei a "fuçar" conhecendo mais profundamente, naquela época, em meados de 2006 já aprendia sobre conceitos básicos de computação... até que me graduei na escola, e ingressei na universidade, hoje estou fazendo Engenharia de Software e cá estou, escrevendo meu próprio site do 0 somente com CSS e HTML, a base da pirâmide de um grande caminho de conhecimento que tenho pela frente.</p>
 					<p>Desde quando eu começei a ter noção sobre vida e sociedade, ainda na escola, tive facilidade em participar de grupos e trabalhar em equipe, minha vida toda teve relação com esportes e atividades em grupo, com isso, é um ponto forte que eu tenho, hoje, tenho lucidez e maturidade suficiente para saber me colocar em cada situação seja ela de líder, ou liderado seguindo sempre a linha racional tendo em mente que sempre será o "justo, certo e o correto"</p>
+					<h2>Lifestyle</h2>
+					<p>Saude emocional adquirida com as apostas esportivas
+					</p>
 					<h2>Hobby</h2>
-					<p>..</p>
-					<p>seguinte</p>
-
-					<div class="lavenderBox">
-						<div class="header">Meus projetos</div>
-						<div class="subtitle linklist"><a href="github.com/devlucascardoso">Portifólio</a> <a href="https://t.me/primetipsgratuito">Apostas Esportivas</a> <a href="www.devlucascardoso.com.br">Site pessoal</a> </div>
-						<div class="linklist">
-							<a href="#">TESTE LINK LIST</a> 
-						</div>						
-						<div class="subtitle">Categoria</div>
+					<p>Nos tempos livres eu aproveito para fazer</p>
+					<h2>Ver também</h2>
+					<ul>
+						<li>
+							<a href="www.google.com">Documentários</a>
+						</li>
+						<li>
+							<a href="www.youtube.com">ChatBot</a>
+						</li>
+						<li>
+							<a href="www.gmail.com">Bla</a>
+						</li>
+					</ul>
+					<div class="categories">Categorias: Podcast | Programação | Sem Noção | dsanida
 					</div>
-					
 				</div>
+
 				<div class="pagefooter">
-					Esta pagina foi editada em 2021 | Template by <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a> <!-- Please leave this link unchanged -->
+					Esta pagina foi editada em Jun. 2021 | Template by <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a> <br> <!-- Please leave this link unchanged -->
 					Sem relação com Wikipedia original.
 					<div class="footerlinks">
 						<a href="#">Política de privacidade</a> <a href="#">Política de Cookie</a> <a href="#">Desenvolvedores</a>
@@ -158,5 +141,5 @@
     </body>
 </html>
 
-<img src="img/pencil.jpg" alt="pencil" />
+
 
