--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</a>
 				</li>
 						<li>
-							<a href="https://www.linkedin.com/in/lucas-cardoso-5a041a114/" target="_blank">
+							<a href="https://www.linkedin.com/in/lucas-cardoso1/" target="_blank">
 								<img src="img/linkedin.png" alt="logo linkedin" height="14"> Linkedin
 						</a>
 						</li>
@@ -67,7 +67,7 @@
 
 					<h3>Projetos</h3>
 					<ul>
-							<li> <a href="https://tipsterlucascardoso.blogabet.com" target="_blank">Apostas Esportivas</a></li>
+							<li> <a href="" target="_blank"></a>Projetos</li>
 					</ul>
 					
 
@@ -97,10 +97,10 @@
 					<p><b>Lucas Cardoso Maia</b> é um gaúcho que mora no Nordeste, universitário, desenvolvedor, nas horas vagas apostador e joga uns jogos.</p>
 					<h2>Biografia</h2>
 					<h3>Carreira</h3>
-					<p>Nascido em São Leopoldo-RS e criado em Mossoró, Rio Grande do Norte, sempre fui apaixonado por computação e tecnologia, desde novo sempre tive a curiosidade como funcionava o computador e começei a "fuçar" conhecendo mais profundamente, naquela época, em meados de 2006 já aprendia sobre conceitos básicos de computação... até que me graduei na escola, e ingressei na universidade, hoje estou fazendo Engenharia de Software e cá estou, escrevendo meu próprio site do 0 somente com CSS e HTML, a base da pirâmide de um grande caminho de conhecimento que tenho pela frente.</p>
+					<p>Sempre fui apaixonado por computação e tecnologia, desde novo sempre tive a curiosidade como funcionava o computador e começei a "fuçar" conhecendo mais profundamente, naquela época, em meados de 2006 já aprendia sobre conceitos básicos de computação... até que me graduei na escola, e ingressei na universidade, hoje estou fazendo Engenharia de Software e cá estou, escrevendo meu próprio site do 0 somente com CSS e HTML, a base da pirâmide de um grande caminho de conhecimento que tenho pela frente.</p>
 					<p>Desde quando eu começei a ter noção sobre vida e sociedade, ainda na escola, tive facilidade em participar de grupos e trabalhar em equipe, minha vida toda teve relação com esportes e atividades em grupo, com isso, é um ponto forte que eu tenho, hoje, tenho lucidez e maturidade suficiente para saber me colocar em cada situação seja ela de líder, ou liderado seguindo sempre a linha racional tendo em mente que sempre será o "justo, certo e o correto"</p>
 					<h2>Lifestyle</h2>
-					<p>Saude emocional adquirida com as apostas esportivas
+					<p>
 					</p>
 					<h2>Hobby</h2>
 					<p>Nos tempos livres eu aproveito para fazer</p>
