--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="article">
 					<h1>Lucas Cardoso</h1>
 					<p class="roleNote">Meu site pessoal, aqui você conhece um pouco mais sobre mim.</p>
-					<p><b>Lucas Cardoso Maia</b> é um gaúcho que mora no Nordeste, universitário, desenvolvedor, nas horas vagas apostador e joga uns jogos.</p>
+					<p><b>Lucas Cardoso</b> é um gaúcho que mora no Nordeste, universitário, desenvolvedor, nas horas vagas apostador e joga uns jogos.</p>
 					<h2>Biografia</h2>
 					<h3>Carreira</h3>
 					<p>Sempre fui apaixonado por computação e tecnologia, desde novo sempre tive a curiosidade como funcionava o computador e começei a "fuçar" conhecendo mais profundamente, naquela época, em meados de 2006 já aprendia sobre conceitos básicos de computação... até que me graduei na escola, e ingressei na universidade, hoje estou fazendo Engenharia de Software e cá estou, escrevendo meu próprio site do 0 somente com CSS e HTML, a base da pirâmide de um grande caminho de conhecimento que tenho pela frente.</p>
