--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<p>
 					</p>
 					<h2>Hobby</h2>
-					<p>Nos tempos livres eu aproveito para fazer</p>
+					<p>Nos tempos livres</p>
 					<h2>Ver também</h2>
 					<ul>
 						<li>
