--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<a href="www.gmail.com">Bla</a>
 						</li>
 					</ul>
-					<div class="categories">Categorias: Podcast | Programação | Sem Noção | dsanida
+					<div class="categories">Categorias: Podcast | Programação | vsdlvsv | dsanida
 					</div>
 				</div>
 
